# face-detection-project

./: CMakeLists.txt  README.md  face-detection.cpp
,vscode/: settings.json
